--- a/helmfile/apps/matrix-chat/synapse/charts/synapse/Chart.yaml
+++ b/helmfile/apps/matrix-chat/synapse/charts/synapse/Chart.yaml
@@ -1,25 +1,31 @@
+# Copyright Broadcom, Inc. All Rights Reserved.
+# SPDX-License-Identifier: APACHE-2.0
+
+annotations:
+  category: Communications
+  licenses: Apache-2.0
 apiVersion: v2
-name: synapse
+appVersion: "v1.133.0"
+dependencies:
+  - name: common
+    repository: oci://registry-1.docker.io/bitnamicharts
+    tags:
+      - bitnami-common
+    version: "2.31.3"
 description: Mijn Bureau Synapse homeserver, the matrix reference implementation
+home: https://minbzk.github.io/mijn-bureau/
 icon: https://matrix.org/images/matrix-logo.svg
-
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
-type: application
-
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
+keywords:
+  - communications
+  - chat
+  - matrix
+  - synapse
+  - element
+maintainers:
+  - name: Ministerie van Binnenlandse Zaken en Koninkrijksrelaties
+    url: https://github.com/MinBZK/mijn-bureau-infra
+name: synapse
+sources:
+  - https://github.com/MinBZK/mijn-bureau-infra/tree/main/helmfile/apps/matrix-chat/synapse/charts/synapse
+#type: application
 version: 0.1.0
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
-appVersion: "v1.132.0"
