--- a/helmfile/apps/matrix-chat/synapse/charts/synapse/Chart.yaml
+++ b/helmfile/apps/matrix-chat/synapse/charts/synapse/Chart.yaml
@@ -5,7 +5,7 @@ annotations:
   category: Communications
   licenses: Apache-2.0
 apiVersion: v2
-appVersion: "v1.133.0"
+appVersion: "1.133.0"
 dependencies:
   - name: common
     repository: oci://registry-1.docker.io/bitnamicharts
