--- a/helmfile/environments/demo/application.yaml
+++ b/helmfile/environments/demo/application.yaml
@@ -2,5 +2,4 @@ applications:
   ai:
     namespace: "icbr-poc-ai-endpoint"
   chat:
-    enabled: true
-    namespace: ~
+    namespace: "icbr-poc-chat"
