--- a/helmfile/apps/chat/element-web/Chart.yaml
+++ b/helmfile/apps/chat/element-web/Chart.yaml
@@ -1,15 +1,6 @@
-annotations:
-  category: "streaming-messaging"
-  licenses: "Apache-2.0"
-apiVersion: "v2"
-dependencies:
-  - name: "common"
-    version: "^2.x.x"
-    repository: "oci://registry.opencode.de/bmi/opendesk/components/external/charts/bitnami-charts"
-description: "A Bitnami-style Helm chart for Element Web"
-keywords:
-  - "jitsi"
-  - "networking"
-name: "opendesk-element"
-type: "application"
-version: "0.1.0"
+apiVersion: v2
+name: element-web
+description: A Helm chart for deploying Element Web
+type: application
+version: 0.1.0
+appVersion: "1.11.51"
