--- a/helmfile/apps/chat/element-web/charts/element-web/values.yaml
+++ b/helmfile/apps/chat/element-web/charts/element-web/values.yaml
@@ -14,7 +14,7 @@ ingress:
   enabled: false
   hostname: element-web.local
   annotations: {}
-  tls: false
+  tls: true
 
 resources: {}
 nodeSelector: {}
