🚧(feat) Confirm that not all settings are configurable (yet)

--- a/helmfile/apps/chat/synapse/charts/synapse/values.yaml
+++ b/helmfile/apps/chat/synapse/charts/synapse/values.yaml
@@ -890,6 +890,7 @@ synapse:
     directory: "/synapse/data"
     homeServerConfigFile: "/synapse/config/homeserver.yaml"
   serverName: "synapse.internal"
+  webClientLocation: ~
   reportStats:
     enabled: false
     endpoint: ""
