🚧(feat) Sync with keycloak branch, bugfixes

--- a/helmfile/apps/chat/synapse/charts/synapse/values.yaml
+++ b/helmfile/apps/chat/synapse/charts/synapse/values.yaml
@@ -966,7 +966,7 @@ synapse:
       ## @param synapse.retention.allowedLifetime.max Retention policy limit. If set, and the state of a room contains a `m.room.retention` event in its state which contains a `max_lifetime` that's beyond this bound, Synapse will cap the room's policy to these limits when running purge jobs.
       max: null
     ## @param synapse.retention.purgeJobs Server admins can define the settings of the background jobs purging the events whose lifetime has expired under the purge_jobs section.
-    purgeJobs: null
+    purgeJobs: []
   ## @param synapse.autoJoinRooms Users who register on this homeserver will automatically be joined to the rooms listed under this option. By default, any room aliases included in this list will be created as a publicly joinable room when the first user registers for the homeserver. If the room already exists, make certain it is a publicly joinable room, i.e. the join rule of the room must be set to public. As Spaces are just rooms under the hood, Space aliases may also be used.
   autoJoinRooms: []
   ## @param synapse.oidcProviders List of OpenID Connect (OIDC) / OAuth 2.0 identity providers, for registration and login.
